--- a/web_back/login.html
+++ b/web_back/login.html
@@ -79,6 +79,15 @@
                 }
             })
         })
+        document.onkeydown = function (e) {
+            if (e.keyCode == 13) {
+                console.log(1);
+                $('.input_sub').click();
+            }
+            // if ($('.modal').css('display') == 'block') {
+            //     $('.modal').modal('keyboard');
+            // }
+        }
     </script>
 </body>
 
