--- a/web_back/article_category.html
+++ b/web_back/article_category.html
@@ -72,7 +72,7 @@
                 <tfoot>
                     <tr>
                         <td colspan="3" class="text-center">
-                            <a href="#" class="btn btn-success" data-toggle="modal" data-target="#addModal">新增分类</a>
+                            <a href="#" class="btn btn-success xz" data-toggle="modal" data-target="#addModal">新增分类</a>
                         </td>
                     </tr>
                 </tfoot>
@@ -89,19 +89,21 @@
                 </div>
                 <div class="modal-body">
                     <form>
+                        <input type="hidden" id="hidden" name="id">
                         <div class="form-group">
-                            <label for="recipient-name" class="control-label">分类名称:</label>
-                            <input type="text" class="form-control" id="recipient-name">
+                            <label for="name" class="control-label">分类名称:</label>
+                            <input type="text" class="form-control" id="name" name="name">
                         </div>
                         <div class="form-group">
-                            <label for="message-text" class="control-label">分类别名:</label>
-                            <input type="text" class="form-control" id="recipient-name">
+                            <label for="slug" class="control-label">分类别名:</label>
+                            <input type="text" class="form-control" id="slug" name="slug">
                         </div>
                     </form>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-default" id="model_shutoff">关闭</button>
-                    <button type="button" class="btn btn-primary" id="model_add">新增</button>
+                    <button type="button" class="btn btn-default" id="modal_shutoff">关闭</button>
+                    <button type="button" class="btn btn-primary" id="modal_add">新增</button>
+                    <button type="button" class="btn btn-primary" id="modal_bj" style="display: none;">编辑提交</button>
                 </div>
             </div>
         </div>
@@ -114,25 +116,84 @@
             <td>{{val.name}}</td>
             <td>{{val.slug}}</td>
             <td class="text-center">
-                <a href="javascript:editTr({&quot;id&quot;:&quot;4&quot;,&quot;slug&quot;:&quot;travel&quot;,&quot;name&quot;:&quot;爱旅行&quot;});"
-                    class="btn btn-info btn-xs">编辑</a>
-                <a href="javascript:deleteTr( 4 );" class="btn btn-danger btn-xs">删除</a>
+                <a href="javascript:;"
+                    class="btn btn-info btn-xs bianji" data-id='{{val.id}}'>编辑</a>
+                <a href="javascript:;" class="btn btn-danger btn-xs shanchu" data-id='{{val.id}}'>删除</a>
             </td>
         </tr>
         {{/each}}
     </script>
+    <script src="./tools/config.js"></script>
+    <script src="./tools/act.js"></script>
     <script>
         // 获取
-        $.ajax({
-            url: 'http://localhost:8000/admin/category_search',
+        act.actget({
             success: function (res) {
-                if (res.code === 200) {
-                    console.log(res);
-
-                    var str = template('template', res);
-                    $('#tb').html(str);
-                }
+                var str = template('template', res);
+                $('#tb').html(str);
             }
+        })
+        // 点击添加
+        $('#modal_add').on('click', function () {
+            // 判断内容是否为空
+            if ($('#name').val().trim() === '' || $('#slug').val().trim() === '') {
+                alert('请书写内容!')
+                return;
+            }
+            act.add({
+                data: $('form').serialize(),
+                success: function () {
+                    location.reload();
+                }, fails: function () {
+                    alert('名称和别名不能重复')
+                }
+            })
+        })
+        $('#modal_shutoff').on('click', function () {
+            $('.modal').modal("hide");
+            $('#name').val('');
+            $('#slug').val('');
+        })
+        $('.xz').on('clcik', function () {
+            $('#modal_add').show();
+            $('#modal_bj').hide();
+        })
+        $('#tb').on('click', '.bianji', function () {
+            $('.modal').modal('show');
+            $('#modal_add').hide();
+            $('#modal_bj').show();
+            // 修改表单域内容
+            // console.log($(this).parents('tr').children().eq(0).text());
+            var id = $(this).data('id');
+            $('#name').val($(this).parents('tr').children().eq(0).text());
+            $('#slug').val($(this).parents('tr').children().eq(1).text());
+            $('#hidden').val(id);
+        })
+        $('#modal_bj').on('click', function () {
+            if ($('#name').val().trim() === '' || $('#slug').val().trim() === '') {
+                alert('请书写内容!')
+                return;
+            }
+            console.log(1);
+            act.edit({
+                success: function () {
+                    location.reload();
+                }, fails: function () {
+                    alert('编辑失败')
+                }
+            })
+
+        })
+        // 删除
+        $('#tb').on('click', '.shanchu', function () {
+            var id = $(this).data('id');
+            act.close({
+                id: id, success: function () {
+                    location.reload();
+                }, fails: function () {
+                    alert('删除失败');
+                }
+            })
         })
     </script>
 
